[package]
name = "rug_integer_vs_std_u128"
version = "0.1.0"
authors = ["Oliver Anderson <oliver.anderson@oxid-esales.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.12.0" 

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "increment"
harness = false


[[bench]]
name = "is_divisible"
harness = false 
